Finalizando a pagina e partindo para botão darkmode e light mode
Utilizando icones e links de redes social

Signed-off-by: Gabriel Evangelista <129545790+gabrielevanger@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -23,12 +23,41 @@
       <p>@GabrielEvanger</p>
     </div>
     <ul>
-      <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
+      <li>
+        <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
+      </li>
+      <li>
+        <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
+      </li>
+      <li>
+        <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
+      </li>
+      <li>
+        <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
+      </li>
     </ul>
-
+    <div id="social-links">
+      <a href="https://github.com/gabrielevanger" target="_blank">
+        <ion-icon name="logo-github"></ion-icon>
+      </a>
+      <a href="https://www.instagram.com/gabriel_evanger/" target="_blank">
+        <ion-icon name="logo-instagram"></ion-icon>
+      </a>
+      <a href="https://wa.me/5595984061361" target="_blank">
+        <ion-icon name="logo-whatsapp"></ion-icon>
+      </a>
+      <a href="https://www.linkedin.com/in/gabriel-evangelista-241545239/" target="_blank">
+        <ion-icon name="logo-linkedin"></ion-icon>
+      </a>
+    </div>
+    <footer>
+      Feito por Gabriel Evangelista
+    </footer>
 
   </div>
 
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
