Css finalizado e adicionando interação ao projeto
Duas pages cridas com variaveis no css puro.

Signed-off-by: Gabriel Evangelista <129545790+gabrielevanger@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="">
 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,11 +16,18 @@
 </head>
 
 <body>
-
   <div id="container">
     <div id="profile">
       <img src="assets/profile.png" alt="Foto Gabriel" />
       <p>@GabrielEvanger</p>
+    </div>
+
+
+    <div id="switch">
+      <button>
+
+      </button>
+      <span></span>
     </div>
     <ul>
       <li>
