:tada: first commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
+<html lang="pt-br">
 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,15 +18,13 @@
 <body>
   <div id="container">
     <div id="profile">
-      <img src="assets/profile.png" alt="Foto Gabriel" />
+      <img src="assets/profile-pic (1).png" alt="Foto Gabriel" />
       <p>@GabrielEvanger</p>
     </div>
 
 
-    <div id="switch">
-      <button>
-
-      </button>
+    <div id="switch" onclick="toggleMode()">
+      <button></button>
       <span></span>
     </div>
     <ul>
@@ -65,6 +63,8 @@
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
