ajust container width

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     </div>
     <ul>
       <li>
+        <a href="https://github.com/gabrielevanger?tab=repositories" target="_blank">Ver meu portifólio</a>
+      </li>
+      <!-- <li>
         <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
       </li>
       <li>
@@ -36,10 +39,7 @@
       </li>
       <li>
         <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
-      </li>
-      <li>
-        <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
-      </li>
+      </li> -->
     </ul>
     <div id="social-links">
       <a href="https://github.com/gabrielevanger" target="_blank">
