ajuste de imagem

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="container">
     <div id="profile">
-      <img src="assets/profile-pic (1).png" alt="Foto Gabriel" />
+      <img src="assets/profile.png" alt="Foto Gabriel" />
       <p>@GabrielEvanger</p>
     </div>
 
