Link de email e botão de enviar adicionado

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <li>
         <a href="https://github.com/gabrielevanger?tab=repositories" target="_blank">Ver meu portifólio</a>
       </li>
-      <!-- <li>
-        <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
-      </li>
       <li>
+        <a href="mailto:gabriel.evanger@gmail.com?subject=Informa%C3%A7%C3%B5es&body=Ol%C3%A1%20Gabriel%2C%20gostaria%20de%20tirar%20duvidas!" target="_blank">Enviar e-mail</a>
+      </li>
+      <!-- <li>
         <a href="https://github.com/gabrielevanger" target="_blank">Ver meu portifólio</a>
       </li>
       <li>
